# ipc_exchanger

./: .gitignore  CMakeLists.txt  README.md  build.sh  test_receiver.py
common/: protocol.hpp
receiver/: main.cpp
sender/: main.cpp
